Testing python load test

--- a/.github/workflows/airflow-tester.yml
+++ b/.github/workflows/airflow-tester.yml
@@ -19,6 +19,6 @@ jobs:
         continue-on-error: true
         run: flake8 dags/*.py 
       - name: Execute Python
-        run: python *.py
+        run: python dags/*.py
       - name: Execute tests
         run: pytest tests/*.py
