--- a/.github/workflows/airflow-tester.yml
+++ b/.github/workflows/airflow-tester.yml
@@ -12,19 +12,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Install airflow
-        run: |-
-          pip install pytest pytest-black flake8 apache-airflow 
-          
       - name: Build Docker Image
-        run: flake8  --ignore E501 dags --benchmark -v 
-        continue-on-error: true
-      - name: Build Docker Image
-        run: pytest dags --black -v 
-        continue-on-error: true
-      - name: Execute Python
-        run: python dags/*.py
-      - name: Execute tests
-        run: pytest tests/*.py
+        run: docker build . -t tester:latest
+      - name: Run Docker 
+        run: docker run tester:latest
 
 
