--- a/.github/workflows/airflow-tester.yml
+++ b/.github/workflows/airflow-tester.yml
@@ -15,6 +15,6 @@ jobs:
       - name: Build Docker Image
         run: docker build . -t tester:latest
       - name: Run Docker 
-        run: docker run tester:latest -e TESTS_FOLDER=tests -e DAG_FOLDER=DAG_FOLDER
+        run: docker run -e TESTS_FOLDER=tests -e DAG_FOLDER=DAG_FOLDER tester:latest
 
 
