--- a/.github/workflows/airflow-tester.yml
+++ b/.github/workflows/airflow-tester.yml
@@ -15,6 +15,6 @@ jobs:
       - name: Build Docker Image
         run: docker build . -t tester:latest
       - name: Run Docker 
-        run: docker run -e TESTS_FOLDER=tests -e DAG_FOLDER=dags -v /airflow:/home/runner/work/github-data-flow-example/github-data-flow-example tester:latest
+        run: docker run -e TESTS_FOLDER=tests -e DAG_FOLDER=dags -v /home/runner/work/github-data-flow-example/github-data-flow-example:/airflow tester:latest
 
 
